@@ -33,6 +33,7 @@ Erik Schoenfelder <schoenfr@gaertner.de>
 Eugene Doudine <dudin@np.nk.nornik.ru>
 Florian Hatat <mininet@wanadoo.fr>
 Frank Mehnert <fm3@os.inf.tu-dresden.de>
+Gary Poppitz <gpoppitz@tachyon.net>
 Goran Koruga <goran.koruga@hermes.si>
 Hal Snyder <hal@vailsys.com>
 HASEGAWA Tomoki <thasegawa@mta.biglobe.ne.jp>
